with app bridge

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
+    <meta name="shopify-api-key" content="25c4290a19018ccd69167cc2c1cae543" />
+    <script src="https://cdn.shopify.com/shopifycloud/app-bridge.js"></script>
+
     <title>React App</title>
   </head>
   <body>
